--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             <img id="img-full" src="img/img-estudio-full.png" alt="planos">
             <img id="img-min" src="img/CM_IMG1.png" alt="planos">
         </div>
+        <div id="anchor-servicios"></div>
     </section>
 
     <div id='lines-wrapper'>
@@ -94,7 +95,6 @@
 
         <section id="servicios">
 
-            <div id="anchor-servicios" class="anchor"></div>
             <div id="mark-servicios" class="mark"></div>
             <div id="lines-action" class="mark"></div>
 
