--- a/dts_san_martin.html
+++ b/dts_san_martin.html
@@ -43,14 +43,34 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                <img class="" data-responsive="false" src="projects/p_000/full/01.jpg">
-                <img class="" data-responsive="true" src="projects/p_000/full/02.jpg">
+
+                <div data-responsive="false"> <img src="projects/p_000/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/02.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_000/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/08.jpg"></div>
+
+
+                <!-- <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div>
+                <div data-responsive="false"></div> -->
+
+                <!-- <img class="" data-responsive="false" src="projects/p_000/full/01.jpg">
+                <img class="" data-responsive="false" src="projects/p_000/full/02.jpg">
                 <img class="" data-responsive="false" src="projects/p_000/full/03.jpg">
                 <img class="" data-responsive="false" src="projects/p_000/full/04.jpg">
                 <img class="" data-responsive="false" src="projects/p_000/full/05.jpg">
                 <img class="" data-responsive="false" src="projects/p_000/full/06.jpg">
                 <img class="" data-responsive="false" src="projects/p_000/full/07.jpg">
-                <img class="" data-responsive="false" src="projects/p_000/full/08.jpg">
+                <img class="" data-responsive="false" src="projects/p_000/full/08.jpg"> -->
             </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
@@ -63,7 +83,7 @@
     </section>
 
     <section id="project-title">
-        <p data-title='custom'>- Deptos San Martín -</p>
+        <p>- Deptos San Martín -</p>
     </section>
 
     <section id="projects-gallery">
