--- a/battistotti.html
+++ b/battistotti.html
@@ -43,20 +43,22 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                <img class="" src="projects/p_003/full/01.jpg" alt="">
-                <img class="" src="projects/p_003/full/02.jpg" alt="">
-                <img class="" src="projects/p_003/full/03.jpg" alt="">
-                <img class="" src="projects/p_003/full/04.jpg" alt="">
-                <img class="" src="projects/p_003/full/05.jpg" alt="">
-                <img class="" src="projects/p_003/full/06.jpg" alt="">
-                <img class="" src="projects/p_003/full/07.jpg" alt="">
-                <img class="" src="projects/p_003/full/08.jpg" alt="">
-                <img class="" src="projects/p_003/full/09.jpg" alt="">
-                <img class="" src="projects/p_003/full/10.jpg" alt="">
-                <img class="" src="projects/p_003/full/11.jpg" alt="">
-                <img class="" src="projects/p_003/full/12.jpg" alt="">
-                <img class="" src="projects/p_003/full/13.jpg" alt="">
-            </div>
+
+                    <div data-responsive="false"> <img src="projects/p_003/full/01.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/02.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/03.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/04.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/05.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/06.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/07.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/08.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/09.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/10.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/11.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/12.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_003/full/13.jpg"></div>
+
+                </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
                 <button onclick="closeFullGallery()"><img src="img/full-cross.png" alt=""></button>
