--- a/brando.html
+++ b/brando.html
@@ -43,11 +43,12 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                <img class="" src="projects/p_009/full/01.jpg" alt="">
-                <img class="" src="projects/p_009/full/02.jpg" alt="">
-                <img class="" src="projects/p_009/full/03.jpg" alt="">
-                <img class="" src="projects/p_009/full/04.jpg" alt="">
-                <img class="" src="projects/p_009/full/05.jpg" alt="">
+                    <div data-responsive="false"> <img src="projects/p_009/full/01.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_009/full/02.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_009/full/03.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_009/full/04.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_009/full/05.jpg"></div>
+
             </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
