--- a/massola.html
+++ b/massola.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/projects-gallery.css">
 </head>
 
-<body onresize="onResizeAction()" >
+<body onresize="onResizeAction()">
 
     <section id="menu-desplegable" class="menu-off">
         <div><a class="burger-link" href="index.html#anchor-estudio">Estudio</a></div>
@@ -43,11 +43,13 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                <img class="" src="projects/p_008/full/01.jpg" alt="">
-                <img class="" src="projects/p_008/full/02.jpg" alt="">
-                <img class="" src="projects/p_008/full/03.jpg" alt="">
-                <img class="" src="projects/p_008/full/04.jpg" alt="">
-                <img class="" src="projects/p_008/full/05.jpg" alt="">
+
+                <div data-responsive="false"> <img src="projects/p_008/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/05.jpg"></div>
+
             </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
@@ -64,7 +66,8 @@
 
     <section id="projects-gallery">
         <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button>
+        </div>
 
         <div id="img-container">
             <div id="gallery-images">
