--- a/battistotti.html
+++ b/battistotti.html
@@ -51,12 +51,9 @@
                     <div data-responsive="false"> <img src="projects/p_003/full/05.jpg"></div>
                     <div data-responsive="false"> <img src="projects/p_003/full/06.jpg"></div>
                     <div data-responsive="false"> <img src="projects/p_003/full/07.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/08.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/09.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/10.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/11.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/12.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/13.jpg"></div>
+                    <div data-responsive="true"> <img src="projects/p_003/full/08.jpg"></div>
+                    <div data-responsive="true"> <img src="projects/p_003/full/10.jpg"></div>
+                    <div data-responsive="true"> <img src="projects/p_003/full/12.jpg"></div>
 
                 </div>
             <div id="gallery-buttons">
@@ -120,28 +117,13 @@
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_003/min/09.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
                     <img src="projects/p_003/min/10.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(9)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_003/min/11.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(10)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
                     <img src="projects/p_003/min/12.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(11)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/13.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(12)">Ver más</button></div>
                 </div>
 
             </div>
