--- a/baum.html
+++ b/baum.html
@@ -51,8 +51,7 @@
                 <div data-responsive="false"> <img src="projects/p_006/full/05.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_006/full/06.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_006/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/08.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/09.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_006/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -116,10 +115,6 @@
                     <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
-                <div class="img min-out">
-                    <img src="projects/p_006/min/09.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
-                </div>
             </div>
         </div>
         <script src="js/min-gallery.js"></script>
