--- a/camerano.html
+++ b/camerano.html
@@ -49,7 +49,7 @@
                 <div data-responsive="false"> <img src="projects/p_002/full/03.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_002/full/04.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_002/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_002/full/06.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_002/full/06.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
