--- a/castiglia.html
+++ b/castiglia.html
@@ -50,12 +50,9 @@
                 <div data-responsive="false"> <img src="projects/p_007/full/04.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_007/full/05.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_007/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/08.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/09.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/10.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/11.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_007/full/12.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_007/full/07.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_007/full/09.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_007/full/11.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -110,28 +107,13 @@
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_007/min/07.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
                     <img src="projects/p_007/min/08.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_007/min/09.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
                     <img src="projects/p_007/min/10.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(9)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_007/min/11.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(10)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
