--- a/castro.html
+++ b/castro.html
@@ -48,8 +48,7 @@
                     <div data-responsive="false"> <img src="projects/p_011/full/02.jpg"></div>
                     <div data-responsive="false"> <img src="projects/p_011/full/03.jpg"></div>
                     <div data-responsive="false"> <img src="projects/p_011/full/04.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_011/full/05.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_011/full/06.jpg"></div>
+                    <div data-responsive="true"> <img src="projects/p_011/full/05.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -95,11 +94,6 @@
                 <div class="img min-out">
                     <img src="projects/p_011/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_011/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
                 </div>
 
             </div>
