--- a/escuela_medalla.html
+++ b/escuela_medalla.html
@@ -49,8 +49,7 @@
                 <div data-responsive="false"> <img src="projects/p_004/full/03.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_004/full/04.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_004/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/07.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_004/full/06.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -102,11 +101,6 @@
                 <div class="img min-out">
                     <img src="projects/p_004/min/06.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_004/min/07.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
                 </div>
 
             </div>
