--- a/grupo_mas.html
+++ b/grupo_mas.html
@@ -51,8 +51,7 @@
                 <div data-responsive="false"> <img src="projects/p_010/full/05.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_010/full/06.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_010/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_010/full/08.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_010/full/09.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_010/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -114,11 +113,6 @@
                 <div class="img min-out">
                     <img src="projects/p_010/min/08.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_010/min/09.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
                 </div>
 
             </div>
