--- a/arballo.html
+++ b/arballo.html
@@ -48,10 +48,8 @@
                 <div data-responsive="false"> <img src="projects/p_005/full/02.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_005/full/03.jpg"></div>
                 <div data-responsive="false"> <img src="projects/p_005/full/04.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/08.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_005/full/05.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_005/full/07.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -101,18 +99,8 @@
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_005/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
                     <img src="projects/p_005/min/07.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_005/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
