--- a/brando.html
+++ b/brando.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/projects-gallery.css">
 </head>
 
-<body onresize="onResizeAction()" >
+<body onresize="onResizeAction()">
 
     <section id="menu-desplegable" class="menu-off">
         <div><a class="burger-link" href="index.html#anchor-estudio">Estudio</a></div>
@@ -43,11 +43,14 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                    <div data-responsive="false"> <img src="projects/p_009/full/01.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_009/full/02.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_009/full/03.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_009/full/04.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_009/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_008/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -65,34 +68,49 @@
 
     <section id="projects-gallery">
         <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button>
+        </div>
 
         <div id="img-container">
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_009/min/01.png" alt="">
+                    <img src="projects/p_008/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_009/min/02.png" alt="">
+                    <img src="projects/p_008/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_009/min/03.png" alt="">
+                    <img src="projects/p_008/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_009/min/04.png" alt="">
+                    <img src="projects/p_008/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_009/min/05.png" alt="">
+                    <img src="projects/p_008/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_008/min/06.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                </div>
+                <div class="img min-out">
+                    <img src="projects/p_008/min/07.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_008/min/08.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
