--- a/dts_san_martin.html
+++ b/dts_san_martin.html
@@ -44,8 +44,8 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="true"> <img src="projects/p_000/full/01.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_000/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/02.jpg"></div>
                 <div data-responsive="true"> <img src="projects/p_000/full/03.jpg"></div>
                 <div data-responsive="true"> <img src="projects/p_000/full/05.jpg"></div>
                 <div data-responsive="true"> <img src="projects/p_000/full/07.jpg"></div>
